Fix: Recuperando el body del html

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,13 +1,19 @@
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
-  <title>Sentinel | Intelligence Module</title>
-  <meta name="description" content="Plataforma de inteligencia OSINT, análisis de riesgos y monitoreo de amenazas en tiempo real." />
-
-  <meta property="og:type" content="website" />
-  <meta property="og:title" content="Sentinel - Sistema de Inteligencia" />
-  <meta property="og:description" content="Dashboard profesional para análisis de fuentes abiertas y detección de amenazas." />
-  
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <title>Sentinel | Intelligence Module</title>
+    <meta name="description" content="Plataforma de inteligencia OSINT y monitoreo de amenazas." />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Sentinel - Sistema de Inteligencia" />
+    <meta property="og:description" content="Dashboard profesional para análisis de fuentes abiertas." />
   </head>
+  
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
+</html>
